syntax = "proto3";

import "google/protobuf/timestamp.proto";

package AccountProto;

service GrpcAccount {
    rpc GetAccountDetail (GrpcAccountIdRequest) returns (GrpcAccountDTO);
    rpc GetAdminAccountDetail (GrpcAccountIdListRequest) returns (GrpcListAdminAccountsDTO);
    rpc UpdateAccount (GrpcUpdateAccountRequest) returns (GrpcEmpty);
    rpc GetSimpleAccounts (GrpcAccountIdListRequest) returns (GrpcListSimpleAccountsDTO);
    rpc SearchAccount(GrpcSearchAccountRequest) returns (GrpcListAccountIds);
}

message GrpcEmpty {}

message GrpcAccountIdRequest {
    string AccountId = 1;
}

message GrpcAccountIdListRequest {
    repeated string AccountIds = 1; // HashSet<Guid> represented as repeated strings
}

message GrpcUpdateAccountRequest {
    string AccountId = 1;
    string UserName = 2;
}

message GrpcSearchAccountRequest {
    string Keyword = 1;
}

message GrpcAccountDTO {
    bool IsActive = 1;
    string UserName = 2;
    string Email = 3;
    string PhoneNumber = 4;
    google.protobuf.Timestamp CreatedAt = 5; // DateTime <=> Timestamp
    google.protobuf.Timestamp UpdatedAt = 6; // DateTime <=> Timestamp
    bool IsGoogleLinked = 7;
    bool IsPhoneNumberLinked = 8;
    bool IsEmailLinked = 9;
}

message GrpcAdminAccountDTO {
    bool IsActive = 1;
    string UserName = 2;
    string Email = 3;
    string PhoneNumber = 4;
    google.protobuf.Timestamp CreatedAt = 5; // DateTime <=> Timestamp
    google.protobuf.Timestamp UpdatedAt = 6; // DateTime <=> Timestamp
    bool IsGoogleLinked = 7;
    bool IsPhoneNumberLinked = 8;
    bool IsEmailLinked = 9;
}

message GrpcSimpleAccountDTO {
    string Email = 3;
    string PhoneNumber = 4;
}

message GrpcListSimpleAccountsDTO {
    map<string, GrpcSimpleAccountDTO> Accounts = 1; // Dictionary <=> MapField
}

message GrpcListAdminAccountsDTO {
    map<string, GrpcAdminAccountDTO> Accounts = 1; // Dictionary <=> MapField
}

message GrpcListAccountIds{
    repeated string AccountIds = 1;
}