syntax = "proto3";

import "google/protobuf/timestamp.proto";

package IdentityProto;

service GrpcIdentity {
    rpc GetAccountDetail (GrpcIdRequest) returns (GrpcAccountDetailDTO);
    rpc GetSimpleAccounts (GrpcIdsSetRequest) returns (GrpcListSimpleAccountsDTO);
}

message GrpcEmpty {}

message GrpcIdRequest {
    string Id = 1;
}

message GrpcIdsSetRequest {
    repeated string Ids = 1; // HashSet<Guid> represented as repeated strings
}

message GrpcSimpleAccountDTO {
    string Id = 1;
    string Username = 2;
    string Email = 3;
    string role = 4;
}

message GrpcAccountDetailDTO {
    string Id = 1;
    string Username = 2;
    string Email = 3;
    string role = 4;
}

message GrpcListSimpleAccountsDTO {
    map<string, GrpcSimpleAccountDTO> Accounts = 1; // Dictionary <=> MapField
}
