syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "Protos/Common.proto";

package UserProto;

service GrpcUser {
    rpc GetSimpleUser(GrpcGetSimpleUsersRequest) returns (GrpcGetSimpleUsersDTO);
    rpc GetUserDetail(GrpcAccountIdRequest) returns (GrpcUserDetailDTO);
    rpc SearchUser(GrpcSearchUserRequest) returns (GrpcListAccountIds);
    rpc GetUserSetting(GrpcGetUserSettingRequest) returns (GrpcUserSetting);
    // This will throw exception when user can't be created
    rpc CreateUser(GrpcCreateUserRequest) returns (GrpcEmpty);
    rpc GetUserFollowing(GrpcAccountIdRequest) returns (GrpcListAccountIds);
    rpc GetUserFollower(GrpcAccountIdRequest) returns (GrpcListAccountIds);
    rpc GetSimpleUserReport(GrpcGetUserReportRequest) returns (GrpcSimpleUserReport);
    rpc CreateAdminUser(GrpcCreateAdminRequest) returns (GrpcEmpty);
    rpc UpdateAdminUser(GrpcUpdateAdminRequest) returns (GrpcEmpty);
}

message GrpcEmpty {}

message GrpcAccountIdRequest {
    string AccountId = 1;
}

message GrpcGetUserSettingRequest {
    repeated string AccountId = 1; // HashSet<Guid> represented as repeated strings
}

message GrpcGetSimpleUsersRequest {
    repeated string AccountId = 1; // HashSet<Guid> represented as repeated strings
}

message GrpcCreateAdminRequest {
    string AccountId = 1;
    string AccountUsername = 2;
    string DisplayName = 3;
    string Gender = 4;
    google.protobuf.Timestamp Dob = 5;
    string Address = 6;
    string AvatarURL = 7;
}

message GrpcUpdateAdminRequest {
    string AccountId = 1;
    string AccountUsername = 2;
    string DisplayName = 3;
    string Gender = 4;
    google.protobuf.Timestamp Dob = 5;
    string Address = 6;
    string AvatarURL = 7;
    bool IsDoBUpdated = 8;
}

message GrpcGetUserReportRequest {
    string Lang = 1; // 'en' or 'vi'
    repeated string ReportIds = 2;
}

message GrpcCreateUserRequest {
    string AccountId = 1;
    string FullName = 2;
    string AccountUsername = 3;
    string Avatar = 4;
}

message GrpcSearchUserRequest {
    string Keyword = 1;
}

message GrpcListAccountIds{
    repeated string AccountIds = 1;
}

message GrpcGetSimpleUsersDTO {
    map<string, CommonProto.GrpcSimpleUser> Users = 1; // Dictionary <=> MapField
}

message GrpcUserDetailDTO {
    string AccountId = 1; // Need to parse to Guid
    string DisplayName = 2;
    string AvatarUrl = 3;
    string BackgroundUrl = 4;
    google.protobuf.Timestamp Dob = 5; // DateTime <=> Timestamp
    google.protobuf.StringValue Gender = 6;
    google.protobuf.StringValue Bio = 7;
    google.protobuf.StringValue Address = 8;
    google.protobuf.Int32Value TotalFollower = 9;
    google.protobuf.Int32Value TotalFollowing = 10;
    google.protobuf.Int32Value TotalRecipe = 11;
    bool IsAccountActive = 12;
    string AccountUsername = 13;
    bool IsAdmin = 14;
    google.protobuf.StringValue AccountEmail = 15;
    google.protobuf.StringValue AccountPhoneNumber = 16;
}

message GrpcUserSetting {
    map<string, GrpcSettingCollection> SettingMap = 1; // Dictionary <=> MapField
}

message GrpcSettingCollection {
  repeated GrpcSetting Settings = 1;
}

message GrpcSetting {
    string SettingId = 1;
    string SettingCode = 2;
    string SettingValue = 3;
    string SettingType = 4;
    string DefaultValue = 5;
}

message GrpcSimpleUserReport {
    map<string, GrpcUserReport> Reports = 2; // Dictionary <=> MapField
}

message GrpcUserReport {
    CommonProto.GrpcSimpleUser Reporter = 1;
    CommonProto.GrpcSimpleUser User = 2;
    CommonProto.GrpcSimpleReport Report = 3;
}

message GrpcSimpleReport {
    string Id = 1;
    string ReporterAccountId = 2;
    repeated string Reasons = 3;
    string AdditionalDetail = 4;
    string Status = 5;
    google.protobuf.Timestamp CreatedAt = 6;
}